--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ hr {
 	background: rgba(0, 0, 0, 0.7);
 	border: 1px solid white;
 	font-size: 1.5em;
+	font-weight: inherit;
 	text-shadow: none;
 }
 
