--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body {
-	/* 50px top padding to compensate for fixed bootstrap navbar */
-	padding-top: 50px;
-	color: #676858;
+  /* 50px top padding to compensate for fixed bootstrap navbar */
+  padding-top: 50px;
+  color: #676858;
 
-	/* Font from Google Fonts */
-	font-family: "Lato", sans-serif;
-	font-weight: 300;
+  /* Font from Google Fonts */
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
 }
 
 /*
@@ -14,14 +14,13 @@ body {
 	Developed with help from Stack Overflow.
 */
 .anchor:target {
-	padding-top: 55px;
+  padding-top: 55px;
 }
-
 
 /* Navbar */
 .nav-link,
 p {
-	font-size: 1.1em;
+  font-size: 1.1em;
 }
 
 h1,
@@ -30,32 +29,31 @@ h3,
 h4,
 h5,
 h6 {
-	font-weight: 300;
+  font-weight: 300;
 }
 
 /* Header */
 .title-logo {
-	margin-top: 20px;
+  margin-top: 20px;
 }
 
 .text-thin {
-	font-weight: 100;
+  font-weight: 100;
 }
 
 .title-super {
-	color: #333;
-	font-size: 4em;
+  color: #333;
+  font-size: 4em;
 }
 
 h3 {
-	margin-top: 0.6em;
-	color: #333;
+  margin-top: 0.6em;
+  color: #333;
 }
 
 hr {
-	border-top: 2px dashed #8c8b8b;
+  border-top: 2px dashed #8c8b8b;
 }
-
 
 /* Splash and Content */
 /*
@@ -63,102 +61,95 @@ hr {
 	CSS-Tricks and Stack Overflow.
 */
 .splash {
-	position: relative;
-	background-color: #000;
+  position: relative;
+  background-color: #000;
 }
 
 /* CSS filter use learned from CSS-Tricks */
 .splash-image {
-	opacity: 0.5;
-	-webkit-filter: saturate(1.7) contrast(1);
-	filter: saturate(1.7) contrast(1);
+  opacity: 0.5;
+  -webkit-filter: saturate(1.7) contrast(1);
+  filter: saturate(1.7) contrast(1);
 }
 
 .splash-text {
-	position: absolute;
-	width: 100%;
-	top: 10%;
-	left: 0;
-	color: white;
-	text-align: center;
-	text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.4),
-				 0px 8px 13px rgba(0, 0, 0, 0.1),
-				 0px 18px 23px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  width: 100%;
+  top: 10%;
+  left: 0;
+  color: white;
+  text-align: center;
+  text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
+    0px 18px 23px rgba(0, 0, 0, 0.1);
 }
 
 .splash-heading {
-	display: inline-block;
-	padding: 0.2em;
-	margin: 0;
-	background: rgba(0, 0, 0, 0.7);
-	font-size: 2.9em;
-	font-weight: 700;
+  display: inline-block;
+  padding: 0.2em;
+  margin: 0;
+  background: rgba(0, 0, 0, 0.7);
+  font-size: 2.9em;
+  font-weight: 700;
 }
 
 .splash-line {
-	width: 20%;
-	margin-bottom: 1.3em;
-	border-top: 1px solid #f8f8f8;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  width: 20%;
+  margin-bottom: 1.3em;
+  border-top: 1px solid #f8f8f8;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .splash-sub-heading {
-	padding: 0 0.6em;
-	margin-top: 0;
-	margin-bottom: 0.2em;
-	line-height: 1.4em;
+  padding: 0 0.6em;
+  margin-top: 0;
+  margin-bottom: 0.2em;
+  line-height: 1.4em;
 }
 
 .splash-btn {
-	margin-top: 0.8em;
-	color: white;
-	background: rgba(0, 0, 0, 0.7);
-	border: 1px solid white;
-	font-size: 1.5em;
-	font-weight: inherit;
-	text-shadow: none;
+  margin-top: 0.8em;
+  color: white;
+  background: rgba(0, 0, 0, 0.7);
+  border: 1px solid white;
+  font-size: 1.5em;
+  font-weight: inherit;
+  text-shadow: none;
 }
 
 .splash-btn:hover {
-	background: white;
+  background: white;
 }
-
 
 /* Featured Work */
 .project-bottom-margin {
-	margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .project-image {
-	border: 1px solid #000;
-	opacity: 0.75;
-}
-
-.project-image:hover {
-	opacity: 1;
+  border: 1px solid #000;
 }
 
 .project-title {
-	margin-top: 0.4em;
-	word-spacing: 3px;
+  margin-top: 0.4em;
+  word-spacing: 3px;
 }
 
 .project-title,
 .project-tech {
-	margin-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .project-link-list {
-	padding: 0;
-	margin-top: 0;
-	margin-bottom: 0;
+  padding: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .project-link {
-	display: inline;
-	list-style-type: none;
-	font-size: 1.1em;
-	line-height: 0;
+  display: inline;
+  list-style-type: none;
+  font-size: 1.1em;
+  line-height: 0;
 }
 
 /*
@@ -166,103 +157,101 @@ hr {
 	Separates links (when applicable) on project listings.
  */
 .project-link:not(:first-child):before {
-	content: "| ";
-	padding: 0 10px;
+  content: '| ';
+  padding: 0 10px;
 }
 
 .bottom-line {
-	margin-top: 0;
+  margin-top: 0;
 }
-
 
 /* Footer */
 .media-icons {
-	padding: 0;
-	margin-top: 2px;
-	margin-bottom: 10px;
+  padding: 0;
+  margin-top: 2px;
+  margin-bottom: 10px;
 }
 
 .media-icon-item {
-	display: inline;
-	list-style-type: none;
-	padding-right: 8px;
-	font-size: 1.5em;
-	line-height: 0;
+  display: inline;
+  list-style-type: none;
+  padding-right: 8px;
+  font-size: 1.5em;
+  line-height: 0;
 }
 
 .media-icon-item .fa {
-	color: #676858;
+  color: #676858;
 }
 
 .media-icon-item .fa-envelope-o:hover {
-	color: #000;
+  color: #000;
 }
 
 .media-icon-item .fa-github:hover {
-	color: #6cc644;
+  color: #6cc644;
 }
 
 .media-icon-item .fa-linkedin:hover {
-	color: #00a0dc;
+  color: #00a0dc;
 }
 
 .media-icon-item .fa-twitter:hover {
-	color: #00b6f1;
+  color: #00b6f1;
 }
-
 
 /* Media Queries */
 @media screen and (max-width: 991px) {
-	header,
-	.name-title,
-	.featured-work,
-	.media-icons,
-	p {
-		text-align: center;
-	}
+  header,
+  .name-title,
+  .featured-work,
+  .media-icons,
+  p {
+    text-align: center;
+  }
 
-	.splash-heading {
-		font-size: 2em;
-	}
+  .splash-heading {
+    font-size: 2em;
+  }
 
-	.splash-sub-heading {
-		font-size: 1.8em;
-	}
+  .splash-sub-heading {
+    font-size: 1.8em;
+  }
 
-	.splash-btn {
-		font-size: 1.2em;
-	}
+  .splash-btn {
+    font-size: 1.2em;
+  }
 
-	.media-icon-item {
-		padding-right: 10px;
-		font-size: 1.8em;
-	}
+  .media-icon-item {
+    padding-right: 10px;
+    font-size: 1.8em;
+  }
 }
 
 @media screen and (max-width: 500px) {
-	/* Stack Overflow solution */
-	/*
+  /* Stack Overflow solution */
+  /*
 		This solution pushes the second sentence in the splash-heading to
 		the next line when the viewport is 500px or less.
 	 */
-	.word-break {
-		word-spacing: 500px;
-		line-height: 1.5em;
-	}
+  .word-break {
+    word-spacing: 500px;
+    line-height: 1.5em;
+  }
 
-	.splash-text {
-		top: 2%;
-	}
+  .splash-text {
+    top: 2%;
+  }
 }
 
 @media screen and (min-width: 350px) and (max-width: 400px) {
-	.splash-text {
-		top: 15%;
-	}
+  .splash-text {
+    top: 15%;
+  }
 }
 
 @media screen and (max-width: 350px) {
-	.title-super {
-		font-size: 3.4em;
-	}
+  .title-super {
+    font-size: 3.4em;
+  }
 }
